--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav>
-      <div class="Judul"><h1>Portfolio</h1></div>
+      <div class="Judul"><h1>My Portfolio</h1></div>
       <ul>
         <li><a class="center" href="#">Home</a></li>
         <li><a class="center" href="#education">Education</a></li>
